fix(project): fix columns on mobile

--- a/assets/styles/base/_breakpoints.scss
+++ b/assets/styles/base/_breakpoints.scss
@@ -59,3 +59,10 @@
         @content;
     }
 }
+
+// from 999px down (tablet & phone)
+@mixin phone {
+    @media all and (max-width: map-get($breakpoints, phone) - 1px) {
+        @content;
+    }
+}
