--- a/assets/styles/helpers/_align.scss
+++ b/assets/styles/helpers/_align.scss
@@ -58,7 +58,7 @@
         }
 
         &.is-#{$i}-phone {
-            @include phone-only {
+            @include phone {
                 width: $i / 12 * 100%;
             }
         }
